base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-countries-service
spec:
  selector:
    app: go-countries
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 8080
