base/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: go-countries-ingress
    namespace: default
  spec:
    ingressClassName: nginx
    rules:
      - host: app.infrasensei.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: go-countries-service
                  port:
                    number: 7070
              path: /
